[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subgraph-micro-rag"
version = "0.1.0"
description = "A lightweight DDE-enhanced micro retrieval module for KGQA"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn[standard]>=0.27,<1.0",
]
gnn = ["torch>=2.1,<3.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
micro-rag = "micro_rag.cli:main"

[tool.setuptools.packages.find]
include = ["micro_rag*"]
